<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="200dp"
        android:padding="20dp"
        >
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/peso_kg"
            android:inputType="number" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="/"
            android:textAlignment="center"
            android:textSize="25dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:layout_weight="1.1"
            android:text="@string/estatura_m"
            android:inputType="number" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="="
            android:textSize="25dp"
            android:textAlignment="center"
            />
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/resultado"
            android:inputType="number"
            android:editable="false"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        >
        <EditText
            android:id="@+id/number1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:textAlignment="center"
            android:inputType="number" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="/"
            android:textAlignment="center"
            android:textSize="25dp"
            />
        <EditText
            android:id="@+id/number2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:layout_weight="1"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="="
            android:textSize="25dp"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:layout_weight="1"
            android:inputType="number"
            android:editable="false"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="150dp"
        android:text="@string/calcular" />

</LinearLayout>